--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Art Website</title>
+    <title>Krish_Artz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header Section -->
     <header>
-        <h1>Your Art Gallery</h1>
+        <h1>Krish_Artz</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -22,7 +22,7 @@
 
     <!-- Home Section -->
     <section id="home">
-        <h2>Welcome to Your Art Gallery</h2>
+        <h2>Welcome to Krish_Artz Gallery</h2>
         <p>Explore the world of art and creativity.</p>
     </section>
 	<!-- Arts Section -->
