--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="art-articles">
             <!-- Article 1 -->
             <div class="art-article">
-                <img src="article1.jpg" alt="Art Article 1">
+                <img src="article1.jpg" alt="Art Article 1" style"width=200px hight=auto;">
                 <div class="article-content">
                     <h3>Understanding Impressionism</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at ex ac tortor fringilla dignissim.</p>
